trying to add webmentions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
             <li>              
-              <img class="u-photo" src="assets/avatar.png" />
+              <img class="u-photo" src="/assets/avatar.png" />
             </li>
           </ul>
       </div>
