--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,2 +1,2 @@
-<script src="/assets/webmention.min.js" data-id="webmention-container" async></script>
-<link rel="stylesheet" href="/assets/webmention.css">
+<link rel="webmention" href="https://webmention.io/pablo.gomes.nz/webmention" />
+<link rel="pingback" href="https://webmention.io/pablo.gomes.nz/xmlrpc" />
