--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,11 @@
-<footer class="site-footer">
+<footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
+  <span style="display: none;">
+    <img class="u-photo" style="display: none;" src="/assets/avatar.png" />
+    <a rel="me" class="u-url u-uid" href="/">{{ site.author | escape }}</a>
+    <a class="u-url" href="acct:pablo@pablo.gomes.nz"></a>
+  </span>
+
 
   <div class="wrapper">
 
@@ -35,14 +41,5 @@
         <p class="p-note">{{- site.description | escape -}}</p>
       </div>
     </div>
-
   </div>
-
-  <span class="h-card" style="display: none;">
-    <a rel="me" class="u-url u-uid" href="/">{{ site.author | escape }}</a>
-    <a class="u-url" href="acct:pablo@pablo.gomes.nz"></a>
-    <img class="u-photo" src="/assets/avatar.png" />
-    <p class="p-note">{{- site.description | escape -}}</p>
-  </span>
-
 </footer>
