--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@ layout: default
         {{ page.date | date: date_format }}
       </time>
       {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name"><a rel="author" href="/">{{ page.author }}</a></span></span>
+        {% assign author = site.data.author[page.author] %}
+        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span rel="author" class="p-author h-card" itemprop="name">{{ author.name }}</span></span>
       {%- endif -%}
-      {{ page.author.name | jsonify }}
     </p>
   </header>
 
