--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,4 +29,5 @@ layout: default
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+  <a class="u-bridgy-fed" href="https://fed.brid.gy/"></a>
 </article>
